# AI-Influencer

./: README.md  pyproject.toml
docs/source/tutorials/: yolov8.ipynb
notebook/: demo.ipynb
py/: .env  ImageGenerator.py  app.py  main.py  prompts_history.txt
