[tool.poetry]
name = "aiinfluencer"
version = "0.1.0"
description = ""
authors = ["adrianinfantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
pandas = "^2.2.0"
numpy = "^1.26.3"
matplotlip = "^0.2"
seaborn = "^0.13.1"
scikit-learn = "^1.4.0"
polars = "^0.20.5"
jupyter = "^1.0.0"
jupyterlab = "^4.0.11"
mlflow = "^2.9.2"
diffusers = "^0.25.1"
transformers = "^4.37.1"
requests = "^2.31.0"
torch = "^2.1.2"
openai = "^1.9.0"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
streamlit = "^1.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
